# Svachalan

./: .gitignore  LICENSE  PLAN.md  README.md  TechSpec.md  pyproject.toml
src/svachalan/: __init__.py
src/svachalan/backend/: __init__.py  chromium.py  factory.py
src/svachalan/browser/: __init__.py  lifecycle.py
src/svachalan/cli/: main.py
src/svachalan/contracts/: __init__.py  backend.py  errors.py  run.py  workflow.py
src/svachalan/reporting/: __init__.py  store.py
src/svachalan/runtime/: __init__.py  engine.py  parser.py
tests/: test_browser_integration.py  test_cli.py  test_reporting.py  test_runtime.py  test_workflow_validation.py
